- Merge conflicts solved - checkstyle fixed